<resources>
    <string name="app_name">AndroidDemo</string>
    <string name="action_settings">Settings</string>
    <string name="load_local_video_list">加载本地视频列表</string>
    <string name="list_item_text">列表项文本</string>
    <string name="recycler_view_test">测试RecyclerView</string>
    <string name="add_new_line_below">当前位置添加一行</string>
    <string name="delete_line">删除当前行</string>
    <string name="start_play">开始播放</string>
    <string name="stop_play">停止播放</string>
    <string name="live_tv_name">电视台名称</string>
    <string name="live_tv_uri">电视台直播地址</string>
    <string name="load_live_tv_list">加载电视直播列表</string>
    <string name="start_broadcast">start broadcast</string>
    <string name="listen_1983_udp">1983 udp</string>
</resources>
