<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="work.wangxiang.androiddemo.MainActivity">

    <Button
        android:id="@+id/start_broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onStartBroadcast"
        android:text="@string/start_broadcast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_recyclerview_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:onClick="onRecyclerViewTest"
        android:text="@string/recycler_view_test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.alimuzaffar.lib.pin.PinEntryEditText
        android:id="@+id/pinEntryEditText"
        android:layout_width="288dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:background="@null"
        android:digits="1234567890"
        android:inputType="number"
        android:maxLength="4"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_load_live_tv"
        app:pinBackgroundDrawable="@drawable/ic_sms_code_bk"
        app:pinBackgroundIsSquare="true"
        app:pinCharacterSpacing="8dp"
        app:pinTextBottomPadding="0dp"
        tools:text="f1" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_recyclerview_test" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_load_local_video_list"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:onClick="onLoadLocalVideo"
        android:text="@string/load_local_video_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_load_live_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:onClick="onLoadLiveTv"
        android:text="@string/load_live_tv_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_load_local_video_list" />

    <Button
        android:id="@+id/listen_1983"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/listen_1983_udp"
        android:onClick="onListen1983"
        app:layout_constraintBottom_toTopOf="@+id/start_broadcast"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
